[project]
name = "plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=6.6.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
indent-width = 3
line-length = 160
target-version = "py314"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
